fixed #sidebar-left z-index

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,7 +33,7 @@
     
     #sidebar-left {
         position: absolute;
-        z-index: 100;
+        z-index: 110;
         -webkit-box-flex: 0;
         -ms-flex: none;
         flex: none;
